upgrade to Apache BookKeeper 4.7.0 and HerdDB 0.5.0-SNAPSHOT